--- a/views/archive.html
+++ b/views/archive.html
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-6">
                 <button v-if="switcher=='download'"  @click="setswitch('download')" type="button" class="btn btn-danger w-100">Action</button>
-                <button v-else  @click="setswitch('download')" type="button" class="btn btn-secondary w-100">Download</button>
+                <button v-else  @click="setswitch('download')" type="button" class="btn btn-secondary w-100">Choose</button>
             </div>
         </div>
     </div>
