--- a/views/clientarchive.html
+++ b/views/clientarchive.html
@@ -25,7 +25,7 @@
     <div class="text-center form-group">
         <div class="form-group">
             <button v-if="switcher=='install'"  @click="setswitch('install')" type="button" class="btn btn-danger w-100">Action</button>
-            <button v-else  @click="setswitch('install')" type="button" class="btn btn-secondary w-100">Install</button>
+            <button v-else  @click="setswitch('install')" type="button" class="btn btn-secondary w-100">Choose</button>
         </div>
     </div>
     <div v-if="switcher=='install'" class="text-center form-group">
