--- a/views/index.html
+++ b/views/index.html
@@ -99,6 +99,9 @@
                     <!-- NETWORK / CLIENT PAGE -->
                     {{ template "client_page" }}
 
+                    <!-- NETWORK / CLIENT / CONNECTS PAGE -->
+                    {{ template "clientconnects_page" }}
+
                     <!-- NETWORK / CLIENT / ARCHIVE PAGE -->
                     {{ template "clientarchive_page" }}
 
