--- a/views/account.html
+++ b/views/account.html
@@ -21,13 +21,18 @@
             ${message.curr}
         </div>
     </div>
+    <div class="form-group">
+        <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
+    </div>
     <div class="form-group row">
-        <div class="col-md-3">
-            <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
-        </div>
-        <div class="col-md-9">
+        <div class="col-md-6">
             <router-link to="/account/archive" exact>
                 <button type="button" @click="archivelist(authdata.hashname)" class="btn btn-secondary w-100">Archive</button>
+            </router-link>
+        </div>
+        <div class="col-md-6">
+            <router-link to="/network/clients" exact>
+                <button type="button" @click="allconnects()" class="btn btn-secondary w-100">Connections</button>
             </router-link>
         </div>
     </div>
