--- a/views/clientconnects.html
+++ b/views/clientconnects.html
@@ -1,6 +1,6 @@
-{{ define "clients_page" }}
-<div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='clients'">
-    <h2 class="text-center">Clients</h2><br>
+{{ define "clientconnects_page" }}
+<div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='clientconnects'">
+    <h2 class="text-center">Client connections</h2><br>
     <div v-if="message.curr" class="card bg-dark">
         <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -24,8 +24,8 @@
     <div class="text-center form-group">
         <div class="form-group row">
             <div class="col-md-6">
-                <button v-if="switcher=='connect'"  @click="setswitch('connect')" type="button" class="btn btn-danger w-100">Action</button>
-                <button v-else  @click="nullconn(), setswitch('connect')" type="button" class="btn btn-secondary w-100">Connect</button>
+                <button v-if="switcher=='hiddenconnect'"  @click="setswitch('hiddenconnect')" type="button" class="btn btn-danger w-100">Action</button>
+                <button v-else  @click="nullconn(), setswitch('hiddenconnect')" type="button" class="btn btn-secondary w-100">Hidden connect</button>
             </div>
             <div class="col-md-6">
                 <button v-if="switcher=='disconnect'"  @click="setswitch('disconnect')" type="button" class="btn btn-danger w-100">Action</button>
@@ -33,23 +33,23 @@
             </div>
         </div>
     </div>
-    <div v-if="switcher=='connect'" class="text-center form-group">
-        <form id="feedbackForm" class="text-center">
-            <div class="form-group">
-                <input type="text" class="form-control bg-dark text-light" name="name" placeholder="Address" v-model="conndata.address">
-            </div>
-            <div class="form-group">
-                <textarea class="form-control bg-dark text-light" placeholder="PEM Public Key Format" v-model="conndata.public_key"></textarea>
-            </div>
-            <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="connect(conndata.address, conndata.public_key)">Connect</button>
-        </form>
-    </div>
+    <div v-if="switcher=='hiddenconnect'" class="text-center form-group">
+            <form id="feedbackForm" class="text-center">
+                <div class="form-group w-100">
+                    <select v-model="conndata.public_key" class="browser-default custom-select text-light bg-secondary w-100">
+                        <option disabled value="">Choose connection</option>
+                        <option v-for="user in userdata.hiddenconnects" v-bind:value="user.public_key">${user.hashname}</option>
+                    </select>
+                </div>
+                <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="hiddenconnect(userdata.hashname, conndata.public_key)">Hidden connect</button>
+            </form>
+        </div>
     <div v-if="switcher=='disconnect'" class="text-center form-group">
         <form id="feedbackForm" class="text-center">
             <div class="form-group w-100">
                 <select v-model="conndata.hashname" class="browser-default custom-select text-light bg-secondary w-100">
                     <option disabled value="">Choose hashname</option>
-                    <option v-for="user in userdata.connects" v-if="user.connected" v-bind:value="user.hashname">${user.hashname}</option>
+                    <option v-for="user in userdata.hiddenconnects" v-if="user.connected" v-bind:value="user.hashname">${user.hashname}</option>
                 </select>
             </div>
             <button v-on:submit.prevent="onSubmit" onclick="javascript:return false;" type="submit" id="feedbackSubmit" class="btn btn-success w-100" @click="disconnect(conndata.hashname)">Disconnect</button>
@@ -57,7 +57,7 @@
     </div>
     <div class="mx-auto w-100">
         <ul class="list-unstyled chat-1 scrollbar-light-blue">
-            <li v-for="user in userdata.connects">
+            <li v-for="user in userdata.hiddenconnects">
                 <div class="form-group row">
                     <div class="col-md-9" v-if="user.hashname">
                         <router-link :to="{name: 'client', params: { id: user.hashname }}" class="w-100">
@@ -68,7 +68,7 @@
                         <button type="button" class="btn btn-secondary divtext w-100 bg-danger" @click="disconnect(user.hashname), user.connected=false">Disconnect</button>
                     </div>
                     <div class="col-md-3" v-else>
-                        <button type="button" class="btn btn-secondary divtext w-100 bg-success" @click="connect(user.address, user.public_key), user.connected=true">Connect</button>
+                        <button type="button" class="btn btn-secondary divtext w-100 bg-success" @click="hiddenconnect(conndata.hashname, user.public_key), user.connected=true">Connect</button>
                     </div>
                 </div>
             </li>
