--- a/views/network.html
+++ b/views/network.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-md-6">
                 <router-link to="/network/settings">
-                    <button class="btn btn-secondary w-100" @click="connects()">Settings</button>
+                    <button class="btn btn-secondary w-100" @click="currconnects()">Settings</button>
                 </router-link>
             </div>
         </div>
