--- a/views/about.html
+++ b/views/about.html
@@ -1,26 +1,7 @@
 {{ define "about_page" }}
 <div class="col-md-8 mx-auto my-3" v-if="opened=='about'">
     <h2 class="text-center">About</h2><br>
-    <div v-if="message.curr" class="text-center col-10 mx-auto">
-        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-    </div>
+    {{ template "message_part" }}
     <div class="accordion " id="accordionExample">
         <div class="card bg-dark">
             <div class="card-header" id="headingOne">
