--- a/views/account.html
+++ b/views/account.html
@@ -1,26 +1,7 @@
 {{ define "account_page" }}
 <div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='account'">
     <h2 class="text-center">Account</h2><br>
-    <div v-if="message.curr">
-        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-    </div>
+    {{ template "message_part" }}
     <div class="form-group">
         <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
     </div>
