--- a/views/client.html
+++ b/views/client.html
@@ -1,31 +1,10 @@
 {{ define "client_page" }}
 <div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='client'">
     <h2 class="text-center">Client</h2><br>
-    <div v-if="message.curr">
-        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-    </div>
-
+    {{ template "message_part" }}
     <div class="form-group">
         <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
     </div>
-
     <div class="form-group row">
         <div class="col-md-6" v-if="conndata.hashname">
             <router-link :to="{name: 'clientarchive', params: {id: conndata.hashname}}" exact>
