--- a/views/clientarchivefile.html
+++ b/views/clientarchivefile.html
@@ -1,26 +1,7 @@
 {{ define "clientarchivefile_page" }}
 <div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='clientarchivefile'">
     <h2 class="text-center">Client Archive File</h2><br>
-    <div v-if="message.curr" class="card bg-dark">
-        <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-        <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-           ${message.curr}
-        </div>
-        <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-            ${message.curr}
-        </div>
-    </div>
+    {{ template "message_part" }}
     <div class="h-25 form-group">
         <button type="button" class="btn btn-success divtext w-100" @click="installfile(conndata.hashname, filedata.hash)">Install</button>
 	</div>
