--- a/views/login.html
+++ b/views/login.html
@@ -6,27 +6,8 @@
                 <div class="text-center col-12">
                     <h2>Authorization</h2>
                 </div>
-                <div v-if="message.curr" class="text-center col-10 mx-auto">
-                    <div v-if="message.desc=='success'" class="alert alert-success" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                    <div v-if="message.desc=='danger'" class="alert alert-danger" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                    <div v-if="message.desc=='warning'" class="alert alert-warning" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                        ${message.curr}
-                    </div>
-                </div>
                 <div class="text-center col-10 mx-auto">
+                    {{ template "message_part" }}
                     <form id="feedbackForm" class="text-center">
                         <div class="form-group">
                             <input type="text" class="form-control bg-dark text-light" name="name" placeholder="Username" v-model="userdata.username">
