--- a/views/account.html
+++ b/views/account.html
@@ -2,18 +2,23 @@
 <div class="col-12 col-md-8 mx-auto my-3" v-if="opened=='account'">
     <h2 class="text-center">Account</h2><br>
     {{ template "message_part" }}
-    <div class="form-group">
-        <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
+    <div class="form-group row">
+        <div class="col-md-6">
+            <button @click="savepublic()" type="button" class="btn btn-success w-100">Copy public key</button>
+        </div>
+        <div class="col-md-6">
+            <router-link to="/account/friends" exact>
+                <button type="button" @click="getfriends()" class="btn btn-secondary w-100">Friends</button>
+            </router-link>
+        </div>
     </div>
     <div class="form-group row">
         <div class="col-md-6">
+            <button @click="savecertificate()" type="button" class="btn btn-success w-100">Copy certificate</button>
+        </div>
+        <div class="col-md-6" v-if="authdata.hashname">
             <router-link to="/account/archive" exact>
                 <button type="button" @click="archivelist(authdata.hashname)" class="btn btn-secondary w-100">Archive</button>
-            </router-link>
-        </div>
-        <div class="col-md-6">
-            <router-link to="/network/clients" exact>
-                <button type="button" @click="allconnects()" class="btn btn-secondary w-100">Connections</button>
             </router-link>
         </div>
     </div>
@@ -21,8 +26,11 @@
 Address: "${conndata.address}".
 Username: "${authdata.username}".
 Hashname: "${authdata.hashname}".
+
 Public Key: 
-<p ref="publickey">${conndata.public_key}</p></pre>
+<p ref="publickey">${conndata.public_key}</p>
+Certificate:
+<p ref="certificate">${conndata.certificate}</p></pre>
     <br>
     <div class="form-group row">
         <div class="col-md-6">
