--- a/views/home.html
+++ b/views/home.html
@@ -19,6 +19,24 @@
             <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
                     <button class="btn btn-link text-info" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="true" aria-controls="collapse8">
+                        <h5>Versions 1.0.3s</h5>
+                    </button>
+                </h2>
+            </div>
+            <div id="collapse8" class="collapse show" aria-labelledby="heading8" data-parent="#accordionExample">
+                <div class="card-body">
+                    <ul class="lead text-light">
+                        <li>Added friend-to-friend functions</li>
+                        <li>Updated to gopeer v1.1.1 (information duplication vulnerability fixed)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="card bg-dark">
+            <div class="card-header" id="headingOne">
+                <h2 class="mb-0">
+                    <button class="btn btn-link text-info" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="true" aria-controls="collapse8">
                         <h5>Version 1.0.2s</h5>
                     </button>
                 </h2>
